--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 console = "0.15.2"
 color-format = { git = "https://github.com/LinusDikomey/color-format" }
 vecm = { git = "https://github.com/LinusDikomey/vecm" }
+binverse = "0.6.2"
+binverse_derive = "0.6.2"
+libc = "*"
